Table column spacing increased for legibility (actual fix).
svn changeset:4386/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/table/table.css
+++ b/WebContent/ITMILL/themes/default/table/table.css
@@ -106,7 +106,8 @@
 .i-table-cell-content {
 	white-space: nowrap;
 	overflow: hidden;
-	padding: 3px 5px 3px 3px;
+	padding: 3px 0 3px 3px;
+	margin-right: 5px;
 	height: 18px;
 }
 
